# tchsm-libtc

./: .gitignore  .install_dependencies.sh  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  algorithms.h  algorithms_base64.c  algorithms_check.c  algorithms_generate_keys.c  algorithms_join_signatures.c  algorithms_node_sign.c  algorithms_pkcs1_encoding.c  algorithms_rsa_verify.c  algorithms_verify_signature.c  check_algorithms.c  init.c  main.c  mathutils.h  poly.c  random.c  structs_init.c  structs_serialization.c  tc.h  tc_internal.h  tcb.h  test  test.c  unit_test.h
cmake/: FindCheck.cmake
common/: Makefile  algorithms.c  algorithms.h  init.c  poly.c  random.c
include/: algorithms.h  tc.h  tc_internal.h  tcb.h
src/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  algorithms.h  algorithms_base64.c  algorithms_generate_keys.c  algorithms_join_signatures.c  algorithms_node_sign.c  algorithms_pkcs1_encoding.c  algorithms_rsa_verify.c  algorithms_verify_signature.c  check_algorithms  check_algorithms.c  main.c  mathutils.h  mpz_summary.py  poly.c  random.c  structs_init.c  structs_serialization.c  tcb.h
tcbdealer/: Makefile
tcbnode/: Makefile
tests/: CMakeLists.txt  test.c  test_algorithms_generate_keys.c  test_algorithms_join_signatures.c  test_base64.c  test_check_algorithms.c  test_poly.c  test_structs_serialization.c  unit_test.h
